# CmakeTemplateCXX

./: .gitignore  CMakeLists.txt  README.md  TutorialConfig.h.in
inc/: Tutorial.h  TutorialConfig.h  test.h  tests.h
src/: Tutorial.cpp
src/test/: plot.cpp  plot.h
src_build/test_debug/: CMakeLists.txt
src_build/test_release/: CMakeLists.txt
